add: '.env' variable enviroment, get the '.env-exemple' for own use;
add: Created new app 'authors' for authors from receps and system for profille;

fixed: Solved the problems in loggin and sing up system;

update: atualized the style from system authentication;

update: Renomed the dirs from 'extensions' for 'partials';

--- a/base_templates/receps_list.html
+++ b/base_templates/receps_list.html
@@ -15,7 +15,7 @@
             
             <!-- AUTHOR -->
             <div class="recipe-author">
-                <span class="author-item">
+                <a href="{% url 'authors:profile' username=recipe.user.username %}" class="author-item">
                     <i class="fas fa-user"></i>
                     {{recipe.user.username}}
                 </span>
